--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-browser-dynamic": "~10.2.5",
     "@angular/router": "~10.2.5",
     "bootstrap": "^5.3.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.14.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
